--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "react-dom": "18.0.0",
     "react-native": "0.71.1",
     "react-native-file-viewer": "^2.1.5",
-    "react-native-gesture-handler": "~2.5.0",
+    "react-native-gesture-handler": "2.9.0",
     "react-native-mime-types": "^2.3.0",
     "react-native-modal": "^13.0.1",
     "react-native-paper": "^4.12.4",
