--- a/package.json
+++ b/package.json
@@ -13,25 +13,25 @@
     "@expo/vector-icons": "^13.0.0",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/stack": "^6.2.2",
-    "expo": "^46.0.0",
-    "expo-constants": "~13.2.3",
-    "expo-document-picker": "~10.3.0",
-    "expo-file-system": "~14.1.0",
-    "expo-sharing": "~10.3.0",
-    "expo-splash-screen": "~0.16.1",
-    "expo-status-bar": "~1.4.0",
+    "expo": "^48.0.19",
+    "expo-constants": "^14.2.1",
+    "expo-document-picker": "^11.2.2",
+    "expo-file-system": "^15.2.2",
+    "expo-sharing": "^11.2.2",
+    "expo-splash-screen": "^0.18.2",
+    "expo-status-bar": "^1.4.4",
     "intl": "^1.2.5",
     "luxon": "^3.0.1",
-    "react": "18.0.0",
+    "react": "18.2.0",
     "react-dom": "18.0.0",
-    "react-native": "0.69.4",
+    "react-native": "0.71.1",
     "react-native-file-viewer": "^2.1.5",
-    "react-native-gesture-handler": "~2.5.0",
+    "react-native-gesture-handler": "2.9.0",
     "react-native-mime-types": "^2.3.0",
     "react-native-modal": "^13.0.1",
     "react-native-paper": "^4.12.4",
     "react-native-pdftron": "github:PDFTron/pdftron-react-native",
-    "react-native-safe-area-context": "4.3.1",
+    "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.15.0",
     "react-native-web": "~0.18.7"
   },
