--- a/ios/Podfile
+++ b/ios/Podfile
@@ -15,7 +15,6 @@ inhibit_all_warnings!
 production = ENV["PRODUCTION"] == "1"
 
 target 'ReactNativeSample' do
-  use_expo_modules!
   config = use_native_modules!
   pod 'PDFNet', podspec: 'https://pdftron.com/downloads/ios/react-native/latest.podspec'
 
@@ -36,6 +35,11 @@ target 'ReactNativeSample' do
 
   post_install do |installer|
     react_native_post_install(installer)
+    installer.pods_project.targets.each do |target|
+      target.build_configurations.each do |config|
+	    config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '12.4'
+      end
+    end
     __apply_Xcode_12_5_M1_post_install_workaround(installer)
   end
 
